# systemd-directories

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: standalone.rs  standalone_multiple.rs  struct.rs  struct_multiple.rs
src/: lib.rs  standalone.rs  systemd_dirs.rs  tests.rs
